# escalonamento_consultores_makespan

./: README.md  bruteforce.py  cbc_mixed.py  gerar_compatibilidade.py  greedy.py  pyproject.toml
data/: compatibility.csv  consultants.csv  tasks.csv
