[project]
name = "trabalho"
version = "0.1.0"
description = ""
authors = [
    {name = "Ítalo Guimarães",email = "italovinicius18@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ortools (>=9.11.4210,<10.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
